[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Magdalena Niescior"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
pydantic = "^2.0.2"
SQLAlchemy = "^2.0.18"
alembic = "^1.11.1"
uvicorn = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
